Funcion eliminar terminada y añadir terminada

--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,7 @@
 .add-button:hover{
     transform: scale(1.1); /*El botón crezca 1.1 veces su tamaño*/
 }
+
+.tabla-scroll {
+    overflow-x: auto; /*Scroll horizontal */
+}
